--- a/chrome/locale/el/brief.properties
+++ b/chrome/locale/el/brief.properties
@@ -2,8 +2,8 @@ extensions.brief@mozdev.org.description=Επέκταση ανάγνωσης αρ
 defaultFeedsFolderName=Αρχεία ροής με συνδρομή
 howToSubscribeHeader=Μπορείτε να εγγραφείτε συνδρομητές σε αρχεία ροής προσθέτοντας δυναμικούς σελιδοδείκτες στον κατάλογο %S
 searchResults=Αποτελέσματα εύρεσης για: %S
-markEntryAsUnread=Σημείωση ως μη αναγνωσμένο
-markEntryAsRead=Σημείωση ως αναγνωσμένο
+markEntryAsUnread=Μη αναγνωσμένο
+markEntryAsRead=Αναγνωσμένο
 entryWasUpdated=(έγινε μεταβολή)
 today=Σήμερα
 yesterday=Χθες
