--- a/chrome/locale/es-ES/brief.properties
+++ b/chrome/locale/es-ES/brief.properties
@@ -14,7 +14,7 @@ trashIsEmpty=La papelera está vacía
 noEntriesFound=No se encontraron elementos
 noEntries=No hay elementos
 feedsUpdatedAlertTitle=Canales web actualizados
-updateAlertText=%1$S nuevos elementos en %2$S canales web
+updateAlertText=%1$S elementos nuevos en %2$S canal(es) web
 lastUpdatedWithHours=Los canales web fueron actualizados por última vez hace %1$S horas y %2$S minutos.
 lastUpdatedOneHour=Los canales web fueron actualizados por última vez hace 1 hora y %S minutos.
 lastUpdatedOnlyMinutes=Los canales web fueron actualizados por última vez hace %S minutos.
@@ -22,11 +22,11 @@ noUnreadFeedsTooltip=No hay elementos no leídos
 singleUnreadEntry=elemento no leído
 manyUnreadEntries=elementos no leídos
 confirmFeedDeletionTitle=Eliminar canal web
-confirmFeedDeletionText=¿Desea realmente eliminar "%S"?
+confirmFeedDeletionText=¿Desea realmente eliminar «%S»?
 confirmFolderDeletionTitle=Eliminar carpeta
-confirmFolderDeletionText=¿Desea realmente eliminar la carpeta "%S" y todos los canales web que contiene?
+confirmFolderDeletionText=¿Desea realmente eliminar la carpeta «%S» y todos los canales web que contiene?
 confirmTagDeletionTitle=Eliminar etiqueta
-confirmTagDeletionText=¿Desea realmente eliminar la etiqueta "%S"?
+confirmTagDeletionText=¿Desea realmente eliminar la etiqueta «%S»?
 compactPromptTitle=Compactar canales web
-compactPromptText=¿Desea también compactar los canales almacenados para liberar espacio en el disco?
+compactPromptText=¿Desea también compactar los canales web almacenados para liberar espacio en el disco?
 compactPromptConfirmButton=Compactar
