--- a/chrome/locale/es-ES/brief.dtd
+++ b/chrome/locale/es-ES/brief.dtd
@@ -7,10 +7,10 @@
 <!ENTITY headlinesCheckbox.tooltip "Ver sólo los titulares (F)">
 <!ENTITY filterUnread.tooltip "Ver sólo los elementos no leídos (D)">
 <!ENTITY filterStarred.tooltip "Ver sólo los elementos en marcadores (S)">
-<!ENTITY updateButton.tooltip "Obtener las últimas actualizaciones de todos los canales">
-<!ENTITY stopUpdatingButton.tooltip "Detener la búsqueda de las últimas actualizaciones de todos los canales">
+<!ENTITY updateButton.tooltip "Actualizar todos los canales web">
+<!ENTITY stopUpdatingButton.tooltip "Detener el proceso de actualización">
 <!ENTITY showOptions.tooltip "Abrir el panel de preferencias de Brief">
-<!ENTITY sidebarSplitter.tooltip "Doble-clic para ocultar el panel lateral">
+<!ENTITY sidebarSplitter.tooltip "Doble clic ocultará el panel lateral">
 <!ENTITY revealSidebar.tooltip "Mostrar el panel lateral">
 <!ENTITY markViewRead.tooltip "Marcar todos los elementos como leídos (Alt+N)">
 <!-- # Context menu -->
@@ -20,7 +20,7 @@
 <!ENTITY ctxMarkTagRead.label "Marcar elementos etiquetados como leídos">
 <!ENTITY ctxUpdateFeed.label "Actualizar el canal">
 <!ENTITY ctxUpdateFolder.label "Actualizar la carpeta">
-<!ENTITY ctxOpenWebsite.label "Abrir el sitio web">
+<!ENTITY ctxOpenWebsite.label "Ir al sitio web">
 <!ENTITY ctxDeleteFeed.label "Eliminar el canal">
 <!ENTITY ctxDeleteFolder.label "Eliminar la carpeta">
 <!ENTITY ctxDeleteTag.label "Eliminar la etiqueta">
