--- a/chrome/locale/es-ES/options.dtd
+++ b/chrome/locale/es-ES/options.dtd
@@ -1,8 +1,8 @@
 <!ENTITY optionsWindow.title "Preferencias de Brief">
 <!ENTITY mainPane.label "Principal">
 <!ENTITY updateGroup.caption "Actualizaciones">
-<!ENTITY checkForUpdatesBefore.label "Buscar actualizaciones para los canales web cada">
-<!ENTITY checkForUpdates.accesskey "B">
+<!ENTITY checkForUpdatesBefore.label "Actualizar automáticamente los canales web cada">
+<!ENTITY checkForUpdates.accesskey "A">
 <!ENTITY updateIntervalMinutes.label "minutos">
 <!ENTITY updateIntervalHours.label "horas">
 <!ENTITY updateIntervalDays.label "días">
@@ -11,17 +11,17 @@
 <!ENTITY showNotification.accesskey "n">
 <!ENTITY behaviorGroup.caption "Comportamiento">
 <!ENTITY openInNewTab.label "Abrir Brief en una pestaña nueva">
-<!ENTITY openInNewTab.accesskey "B">
-<!ENTITY openEntriesInTabs.label "Abrir elementos en pestañas nuevas">
-<!ENTITY openEntriesInTabs.accesskey "i">
+<!ENTITY openInNewTab.accesskey "f">
+<!ENTITY openEntriesInTabs.label "Abrir los elementos en pestañas nuevas">
+<!ENTITY openEntriesInTabs.accesskey "l">
 <!ENTITY storingGroup.caption "Almacenamiento">
 <!ENTITY expirationBefore.label "Eliminar los elementos descargados hace más de">
 <!ENTITY expirationAfter.label "días">
 <!ENTITY expirationCheckbox.accesskey "E">
-<!ENTITY starredItemsKept.tooltip "Elementos en marcadores se conservarán">
+<!ENTITY starredItemsKept.tooltip "Los elementos en marcadores se conservarán">
 <!ENTITY storedEntriesBefore.label "Almacenar no más de">
 <!ENTITY storedEntriesAfter.label "elementos recientes para cada canal web">
-<!ENTITY storedEntriesCheckbox.accesskey "A">
+<!ENTITY storedEntriesCheckbox.accesskey "c">
 <!ENTITY clearAllEntriesButton.label "Eliminar todos los elementos...">
 <!ENTITY clearAllEntriesButton.accesskey "t">
 <!ENTITY feedsPane.label "Canales web">
@@ -31,22 +31,22 @@
 <!ENTITY exportOPML.label "Exportar...">
 <!ENTITY exportOPML.accesskey "E">
 <!ENTITY displayPane.label "Presentación">
-<!ENTITY showStatusbarIcon.label "Mostrar icono en la barra de estado">
+<!ENTITY showStatusbarIcon.label "Mostrar un icono en la barra de estado">
 <!ENTITY showStatusbarIcon.accesskey "i">
 <!ENTITY showUnreadCounter.label "Mostrar el número de elementos no leídos junto al icono de Brief">
 <!ENTITY showUnreadCounter.accesskey "r">
 <!ENTITY sortUnreadViewOldestFirst.label "Ordenar los elementos comenzando por el más antiguo en la vista de no leídos">
 <!ENTITY sortUnreadViewOldestFirst.accesskey "O">
-<!ENTITY autoMarkRead.label "Marcar automáticamente como leídos los elementos después de verlos">
+<!ENTITY autoMarkRead.label "Marcar los elementos automáticamente como leídos después de verlos">
 <!ENTITY autoMarkRead.accesskey "M">
 <!ENTITY enableItemHightlight.label "Destacar el elemento actual para poder aplicar en él atajos de teclado">
 <!ENTITY enableItemHightlight.accesskey "D">
 <!ENTITY customizeGroup.caption "Apariencia">
 <!ENTITY shortcutsPane.label "Atajos de teclado">
-<!ENTITY editStyleDescription.label "Personalizar la apariencia de los Feeds">
+<!ENTITY editStyleDescription.label "Personalizar la apariencia de los canales web">
 <!ENTITY editStyleButton.label "Personalizar">
 <!ENTITY editStyleButton.accesskey "P">
-<!ENTITY styleEditor.title "Editar estilo personalizado">
+<!ENTITY styleEditor.title "Personalizar la apariencia">
 <!ENTITY seeCustomizationTips.label "Aprende a personalizar la apariencia usando CSS">
 <!ENTITY seeCustomizationTips.url "http://brief.mozdev.org/customize.html">
 <!ENTITY feedName.label "Nombre">
